--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="laptop">#F57F17</color>
+    <color name="headphone">#2E7D32</color>
+    <color name="tas">#D32F2F</color>
 </resources>
